fix #50: add restore operation
